tests/PHPStan/DependencyInjection/invalidIgnoreErrors/rawMessage-and-messages.neon
parameters:
	ignoreErrors:
		-
			rawMessage: 'One'
			messages: ['#Two#']
